--- a/_md-cards.scss
+++ b/_md-cards.scss
@@ -88,3 +88,14 @@
   padding: 5px;
   margin: 5px;
 }
+
+.material_card-play-icon {
+  position: absolute;
+  color: white;
+  top: 50%;
+  left: 50%;
+  font-size: 100px !important;
+  margin-left: -50px;
+  margin-top: -50px;
+  cursor: pointer;
+}
