--- a/_md-cards.scss
+++ b/_md-cards.scss
@@ -1,3 +1,5 @@
+// shoould use a reset css
+
 .material_card {
   color: $fg_dark_main_color;
   font-family: 'Roboto', sans-serif;
@@ -56,7 +58,6 @@
 
   .material_card-content {
     flex-grow: 1;
-    padding: 1rem;
     flex-grow: 5;
     flex-basis: 0;
     min-width: $card_content_min_width;
@@ -65,13 +66,14 @@
     flex-direction: column;
     align-items: stretch;
     .material_card-title {
+      padding: 1rem 1rem 0 1rem;
       h2 {
-        margin: 10px 0px 0px 10px;
+        margin: 0;
       }
     }
     .material_card-excerpt {
       flex-grow: 1;
-      padding: 10px;
+      padding: 1rem;
     }
   }
 
