fix video cards

--- a/_md-cards.scss
+++ b/_md-cards.scss
@@ -23,8 +23,13 @@
     min-width:$card_thumb_min_width;
     min-height:$card_thumb_min_heigth;
 
+    background-color: black;
     background-position: center!important;
     background-size: cover!important;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     .material_card-title  {
 
         position: absolute;
@@ -40,18 +45,30 @@
                      -1px -1px 4px rgba(50, 50, 50, 1);
       }
     }
-    &.video {
-      position: relative;
+
+    &.material_card-video {
       min-height: 0!important;
-      height: 0!important;
-      padding-bottom: 56.25%;
-      width: 100%;//enforce header/player on top
-      .player {
-        position: absolute;
-        top: 0;
-        left: 0;
+      height: auto!important;//the video will define the height
+    }
+    .video_placeholder {
+      .video {
+        display:inline-block;
+        vertical-align:middle;
+        margin: auto;
+        position: relative;
+        min-height: 0;
+        height: 0;
         width: 100%;
-        height: 100%;
+        padding-bottom: 56.25%;
+        background-position: center!important;
+        background-size: cover!important;
+        .player {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+        }
       }
     }
   }
