--- a/_md-cards.scss
+++ b/_md-cards.scss
@@ -102,7 +102,7 @@
     .material_card-spacer {
       flex-grow: 1;
     }
-    .material_card-readMore {
+    a {
       text-decoration: none;
       font-weight: 500;
       flex-shrink: 0;
