--- a/_md-cards.scss
+++ b/_md-cards.scss
@@ -104,6 +104,7 @@
     }
     a {
       text-decoration: none;
+      text-transform: uppercase;
       font-weight: 500;
       flex-shrink: 0;
       padding: 5px;
