--- a/_md-cards.scss
+++ b/_md-cards.scss
@@ -12,6 +12,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   align-items: stretch;
+  align-content: stretch;
   h2 {
     font-weight: 300;
   }
@@ -95,6 +96,7 @@
   }
 
   .material_card-footer {
+    width: 100%;
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
